<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_fb"
        android:textSize="20sp"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        android:textStyle="bold"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/editbox_background_normal"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@android:drawable/editbox_background_normal"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        android:background="@color/colorLogin"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/riscoOne"
        android:layout_width="160dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/line"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/riscoOne"
        app:layout_constraintRight_toLeftOf="@id/riscoTwo"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintVertical_bias="0.05"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/riscoTwo"
        android:layout_width="180dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/line"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_count"
        android:background="@color/colorCreate"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/riscoTwo"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/forgot_account"
        android:textColor="@color/colorLogin"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createBtn"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/not_now"
        android:textColor="@color/colorLogin"
        app:layout_constraintTop_toBottomOf="@id/forgotAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    </androidx.constraintlayout.widget.ConstraintLayout>